--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8" />
     <title>website</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
+    <!-- Header -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,12 +26,14 @@
             </ul>
         </nav>
     </div>
+    <!-- Header End -->
 
     <div class="hero"></div>
 
+    <!-- Page Content -->
     <main class="content">
 
-        <section class="search-engine-optimization" id="search-engine-optimization">
+        <section class="main-content" id="search-engine-optimization">
 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notepad of a Search Engine Optimization plan adjacent a cup of coffee, a laptop, and a pen
                 pot." />
@@ -75,6 +79,7 @@
         </section>
     </main>
 
+    <!--Sidebar to the right of the screen-->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -107,15 +112,17 @@
         </section>
 
     </aside>
+    <!-- Sidebar to the right of the screen End-->
+    <!-- Page Content End -->
 
-
-
+    <!-- Footer -->
     <footer>
         <h2 class="footer">Made with ❤️️ by Horiseon</h2>
         <p class="footer">
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+    <!-- Footer End -->
 </body>
 
 </html>
