--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
 
 
-        <section class="online-reputation-management" id="online-reputation-management">
+        <section class="main-content" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="A Laptop screen showing a graph on reputation data." />
 
@@ -63,7 +63,7 @@
             </article>
         </section>
 
-        <section class="social-media-marketing" id="social-media-marketing">
+        <section class="main-content" id="social-media-marketing">
 
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                 alt="Top view of people on mobil devices with social media logos and labels." />
@@ -81,7 +81,7 @@
 
     <!--Sidebar to the right of the screen-->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="aside-benefits">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -90,7 +90,7 @@
             </p>
         </section>
 
-        <section class="benefit-brand">
+        <section class="aside-benefits">
 
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -100,7 +100,7 @@
             </p>
 
         </section>
-        <section class="benefit-cost">
+        <section class="aside-benefits">
             <div>
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
