title+ img alt added, footer  h2 changed to h4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>website</title>
+    <title>Horiseo Marketing Agency</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -66,7 +66,7 @@
         <section class="main-content" id="social-media-marketing">
 
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
-                alt="Top view of people on mobil devices with social media logos and labels." />
+                alt="Top view of people on mobile devices with social media logos and labels." />
 
             <h2>Social Media Marketing</h2>
             <article>
@@ -83,7 +83,7 @@
     <aside class="benefits">
         <section class="aside-benefits">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png"  alt="Diagram showing how leads generate money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers
                 directly to your website.
@@ -93,7 +93,7 @@
         <section class="aside-benefits">
 
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Logo for brand awareness radar" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and
                 visibility for your business.
@@ -103,7 +103,7 @@
         <section class="aside-benefits">
             <div>
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="a cog with dollar coins logo"></img>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer need to advertise your page.
@@ -117,7 +117,7 @@
 
     <!-- Footer -->
     <footer>
-        <h2 class="footer">Made with ❤️️ by Horiseon</h2>
+        <h4 class="footer">Made with ❤️️ by Horiseon</h4>
         <p class="footer">
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
